--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -120,8 +120,8 @@
 \maketitle
 
 \abstract{
-	Automatic cubatures approximate integrals to user-specified error tolerances.  For high dimensional problems, it is difficult to adaptively change the sampling pattern to focus on peaks because peaks can hide more easily in high dimensional space.  But, one can automatically determine the sample size, $n$, given a reasonable, fixed sampling pattern. This approach is pursued in Jagdeeswaran and Hickernell, Stat.\ Comput., 29:1214-1229, 2019, where a Bayesian perspective is used to construct a credible interval for the integral, and the computation is terminated when the half-widths of the interval is no greater than the required error tolerance.  In our earlier work integration lattice sampling is employed and the computations are expedited by the use of a fast Fourier transform because the covariance kernels for the Gaussian process prior on the integrand are chosen to be shift-invariant.  In this chapter, we extend our fast automatic Bayesian cubature to digital net sampling via digital shift-invariant covariance kernels and fast Walsh transforms.
-	Our algorithm is implemented in the Guaranteed Automatic Integration Library (GAIL) and QMCPy.
+	Automatic cubatures approximate integrals to user-specified error tolerances.  For high dimensional problems, it is difficult to adaptively change the sampling pattern to focus on peaks because peaks can hide more easily in high dimensional space.  But, one can automatically determine the sample size, $n$, given a reasonable, fixed sampling pattern. This approach is pursued in Jagdeeswaran and Hickernell, Stat.\ Comput., 29:1214-1229, 2019, where a Bayesian perspective is used to construct a credible interval for the integral, and the computation is terminated when the half-width of the interval is no greater than the required error tolerance.  Our earlier work employs integration lattice sampling, and the computations are expedited by the fast Fourier transform because the covariance kernels for the Gaussian process prior on the integrand are chosen to be shift-invariant.  In this chapter, we extend our fast automatic Bayesian cubature to digital net sampling via digital shift-invariant covariance kernels and fast Walsh transforms.
+	Our algorithm is implemented in the MATLAB Guaranteed Automatic Integration Library (GAIL) and QMCPy Python library.
 }
 
 
@@ -136,10 +136,10 @@ Cubature, or numerical multivariate integration, is the problem of inferring a n
 \label{FJ:eqn:defn_mu}
 \mu:= \mu(f) := \bbE[f(\boldsymbol{X})] = \int_{[0,1]^d} f(\bsx)\, \textup{d}\bsx, 
 \end{equation}
-when no closed-form analytic expression exists. Typically, values of $f$ are accessible through a black-box function routine. Our goal is to construct a cubature, $\widehat{\mu} = \widehat{\mu}(f)$, depending only on integrand values at the nodes $\{\bsx_i\}_{i=1}^n$, and determine the $n$ that satisfies the error criterion
+when no closed-form analytic expression exists. Typically, values of $f$ are accessible through a black-box function routine. Our goal is to construct a cubature, $\widehat{\mu} = \widehat{\mu}_n = \widehat{\mu}_n(f)$, depending only on integrand values at the nodes $\{\bsx_i\}_{i=1}^n$, and determine the $n$ that satisfies the error criterion
 \begin{equation}
 \label{FJ:eqn:err_crit} 
-\abs{\mu - \widehat{\mu}} \leq \varepsilon
+\abs{\mu - \widehat{\mu}_n} \leq \varepsilon
 \end{equation}
 with high probability. This article extends the fast Bayesian cubature ideas presented in \cite{RatHic19a} to digital sequences \cite{DicPil10a}.
 
@@ -194,7 +194,7 @@ The next section summarizes the key formulae from \cite{RatHic19a}.  Section \re
 
 %\FJHNote{Fred fix this section}
 
-We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussian process, i.e., $f \sim \mathcal{GP}(m,s^2 C_\bstheta)$.  Specifically, $f$ is a random function with constant mean, $m$, and covariance kernel $s^2C_\bstheta$, where $s$ is a positive scale factor, and $C_\bstheta: [0,1]^d \times [0,1]^d \to \mathbb{R} $ is a symmetric, positive-definite kernel parameterized by $\bstheta$.  The parameter $\bstheta$ may affect the shape or smoothness of $C_\bstheta$.  In \cite{RatHic19a} we introduced three methods for resolving the hyperparameters:  empirical Bayes (EB), full Bayes (full), and generalized cross-validation (GCV).  Under assumptions \eqref{FJ:eq:fastcompAssump} it was shown in \cite[Theorem 2]{RatHic19a} that under these three approaches the credible interval for the integral takes the form
+We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussian process, i.e., $f \sim \mathcal{GP}(m,s^2 C_\bstheta)$.  Specifically, the random function $f$ has constant mean, $m$, and covariance kernel $s^2C_\bstheta$, where $s$ is a positive scale factor, and $C_\bstheta: [0,1]^d \times [0,1]^d \to \mathbb{R} $ is a symmetric, positive-definite kernel parameterized by $\bstheta$.  The parameter $\bstheta$ may affect the shape or smoothness of $C_\bstheta$.  In \cite{RatHic19a} we introduced three methods for resolving the hyperparameters:  empirical Bayes (EB), full Bayes (full), and generalized cross-validation (GCV).  Under assumptions \eqref{FJ:eq:fastcompAssump} for the covariance kernel and sampling sites, it was shown in \cite[Theorem 2]{RatHic19a} that under these three approaches the credible interval for the integral takes the form
 %	\begin{subequations}		
 		\begin{align}
 			\label{FJ:eqn:CI}
@@ -207,7 +207,7 @@ We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussia
 		\nonumber 
 		\widetilde{\bsy} &:= \mathsf{V}^H \bsy, \\
 		\nonumber
-		s^2_\textup{MLE} 
+		s^2_\textup{EB} 
 		& =
 		\frac{1}{n^2} 
 		\sum_{i=2}^n \frac{\abs{\widetilde{y}_i}^2}{\lambda_{\bstheta,i}},  \\
@@ -220,8 +220,8 @@ We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussia
 	\begin{subequations}
 		\label{FJ:eqn:fastTheta}
 		\begin{align}
-		\label{FJ:eqn:fastThetaMLE}
-		\bstheta_\textup{MLE}
+		\label{FJ:eqn:fastThetaEB}
+		\bstheta_\textup{EB}
 		&= 
 		\argmin_{\bstheta}
 		\left[
@@ -241,13 +241,13 @@ We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussia
 \begin{subequations}
 	\label{FJ:errSimple}
 	\begin{align}
-		\label{FJ:eqn:err_MLEGCV}
-		\textup{err}_{\textup{CI},\mathsf{x}} = \textup{err}_{\mathsf{x}} & = 2.58 s_{\mathsf{x}} \sqrt{1 - \frac{n}{\lambda_{\bstheta,1}} }, \qquad \mathsf{x} \in \{\textup{MLE}, \textup{GCV}\},  \\ 
+		\label{FJ:eqn:err_EBGCV}
+		\textup{err}_{\textup{CI},\mathsf{x}} = \textup{err}_{\mathsf{x}} & = 2.58 s_{\mathsf{x}} \sqrt{1 - \frac{n}{\lambda_{\bstheta,1}} }, \qquad \mathsf{x} \in \{\textup{EB}, \textup{GCV}\},  \\ 
 		\textup{err}_{\textup{CI},\textup{full}} 
-		& = t_{n-1,0.995} \widehat{\sigma}_{\textup{full}} > \textup{err}_\textup{MLE}. \label{FJ:eq:errFull}
+		& = t_{n-1,0.995} \widehat{\sigma}_{\textup{full}} > \textup{err}_\textup{EB}. \label{FJ:eq:errFull}
 	\end{align}
 \end{subequations}
-In the formulas for the credible interval half-widths, $\bstheta$ is assumed to take on the values $\bstheta_{\textup{MLE}}$ or $\bstheta_{\textup{GCV}}$ as appropriate.
+In the formulas for the credible interval half-widths, $\bstheta$ is assumed to take on the values $\bstheta_{\textup{EB}}$ or $\bstheta_{\textup{GCV}}$ as appropriate.  There is no suitable $\bstheta_{\textup{full}}$.
 
 Our  Bayesian cubature algorithm increases the sample size until the width of the credible interval is small enough.  This is accomplished through successively doubling the sample size; these steps are detailed in Algorithm~\ref{FJ:algorithm1}.
 
@@ -271,22 +271,22 @@ Our  Bayesian cubature algorithm increases the sample size until the width of th
 		
 		\While{$\textup{err}_\textup{CI} > \varepsilon$ and $n \le n_{\textup{max}}$}
 		\State Generate $\{ \bsx_i\}_{i=n' + 1}^{n}$ and sample $\{f(\bsx_i)\}_{i=n'+1}^{n}$
-		\State Compute $\bstheta$ by \eqref{FJ:eqn:fastThetaMLE} or \eqref{FJ:eqn:fastThetaGCV}
-		\State Compute $\textup{err}_\textup{CI}$  according to \eqref{FJ:eqn:err_MLEGCV} or \eqref{FJ:eq:errFull}
+		\State Compute $\bstheta$ by \eqref{FJ:eqn:fastThetaEB} or \eqref{FJ:eqn:fastThetaGCV}
+		\State Compute $\textup{err}_\textup{CI}$  according to \eqref{FJ:eqn:err_EBGCV} or \eqref{FJ:eq:errFull}
 		
 		\State	$n' \gets n, \; n \gets 2n'$
 		
 		\EndWhile
 		
 		\State Sample size to compute $\widehat{\mu}$, $n \gets n'$
-		\State Compute $\widehat{\mu}$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-MLE-Simple}
+		\State Compute $\widehat{\mu}$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-EB-Simple}
 		\State \Return $\widehat{\mu}, \; n$  and $\textup{err}_\textup{CI}$
 	\end{algorithmic}
 \end{algorithm}
 
 We recognize that multiple applications of our credible intervals in one run of the algorithm is not strictly justified.  However, if our integrand comes from the middle of the sample space  and not the extremes, we expect our automatic Bayesian cubature to approximate the integral within the desired error tolerance with high probability. The examples in Section~\ref{FJ:sec:NumExp} support that expectation. 
 
-The credible intervals used in our automatic algorithm are homogeneous with respect to the function data.  If they are valid for some integrand, $f$, they are also valid for the integrand $a f$ for any constant $a$.  
+The credible intervals in our automatic algorithm are homogeneous with respect to the function data.  If they are valid for some integrand, $f$, they are also valid for the integrand $a f$ for any constant $a$.  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -305,7 +305,7 @@ The results of this chapter can be summarized as follows:
 % \Section{Summary}
 
 
-\begin{theorem}
+\begin{theorem} \label{FJ:thm:main}
 	Any symmetric, positive definite, digital shift-invariant kernel of the form \eqref{FJ:eqn:walsh_kernel} scaled to satisfy \eqref{FJ:addAssump}, when matched with digital sequence data sites, satisfies assumptions \eqref{FJ:eq:fastcompAssump}.  The \emph{fast Walsh-Hadamard transform} performs the fast Bayesian transform,  $\bsb \mapsto \mathsf{V}^H \bsb$ , in $\calO(n \log n)$ operations.
 \end{theorem}
 This section defines digital sequences, digital shift-invariant kernels, and the fast Walsh-Hadamard transform.
@@ -347,7 +347,7 @@ Digital sequences have a group structure under digitwise, element-by-element add
 \end{lemma}
 The proof follows straightforwardly from Definition \ref{FJ:def:digitalseq} can be found in \cite{JagThesis19a}.
 
-Digital sequence generators can be chosen by number theory, as in the case of Sobol' \cite{Sob67} and Niederreiter-Xing sequences \cite{NieXin01a} (see also \cite[Chapter 8]{DicPil10a} or they can be chosen by computer search \cite[Chapter 10]{DicPil10a}.  The original generator matrices may be scrambled using linear matrix scrambling \cite{Mat98}.
+Digital sequence generators can be chosen by number theory, as are those of Sobol' \cite{Sob67} and Niederreiter and Xing  \cite{NieXin01a} (see also \cite[Chapter 8]{DicPil10a}, or they can be chosen by computer search \cite[Chapter 10]{DicPil10a}.  The original generator matrices may be scrambled using linear matrix scrambling \cite{Mat98}.
 
 
 \subsection{Covariance Kernels Constructed via Walsh Functions} \label{FJ:sec:Walsh_kernels}
@@ -374,7 +374,7 @@ C_\bstheta (x \oplus \Delta ,t \oplus \Delta ) = K_\bstheta(x \oplus \Delta \opl
 \]
 This follows because $\Delta \oplus \Delta = 0$.
 
-An explicit expression is available for $\omega_{r}$ in the case of order $r=1$ \cite{Nuyens2013}:
+The parameter $r$ is a measure of the digital smoothness of the kernel, which does not correspond to ordinary smoothness.  An explicit expression is available for $\omega_{r}$ in the case of order $r=1$ \cite{Nuyens2013}:
 \begin{equation}
 \label{FJ:eqn:omega1}
 \omega_1(x) 
@@ -404,7 +404,7 @@ The parameter vector $\bstheta$ may now be of dimension $d+1$.
 
 \subsection{Eigenvector-Eigenvalue Decomposition of the Gram Matrix}
 
-For fast Bayesian cubature to succeed, the digital net data sites (Section~\ref{FJ:sec:sobol}) and the covariance kernels (Section~\ref{FJ:sec:Walsh_kernels}) must match in a way that conditions \eqref{FJ:eq:fastcompAssump} are satisfied.  To do this, we identify the eigenvectors of the Gram matrix defined in \eqref{FJ:eq:Gram}.  These are actually the Walsh-Hadamard matrices
+For fast Bayesian cubature to succeed, the digital net data sites (Section~\ref{FJ:sec:sobol}) and the covariance kernels (Section~\ref{FJ:sec:Walsh_kernels}) must match in a way to satisfy  conditions \eqref{FJ:eq:fastcompAssump}.  To do this, we notice that the eigenvectors of the Gram matrix defined in \eqref{FJ:eq:Gram} are Walsh-Hadamard matrices, defined as follows:
 \begin{align}
 \nonumber
 %\arraycolsep=1.4pt\def\arraystretch{0.9}
@@ -484,7 +484,7 @@ Note that the Walsh-Hadamard matrices are symmetric.
         \end{pmatrix}}_{\mathsf{\Lambda}^{(1,k)}} \mathsf{H}^{(1)}.
     \end{align*}
 
-   Now assume that $\mathsf{C}_{\bstheta}^{(m,k)}$ is $2\times 2$ block-Toeplitz matrix with all its sub-blocks and sub-sub-blocks, etc.\ also $2\times 2$ block-Toeplitz for $k = 0, 1, \ldots$.  Then by \eqref{FJ:eq:cblock}, the same holds for $\mathsf{C}_{\bstheta}^{(m+1,k)}$ for $k = 0, 1, \ldots$.  In particular, the block Toepliz property of $\mathsf{C}_{\bstheta}^{(m,0)}$ holds.
+   Now assume that $\mathsf{C}_{\bstheta}^{(m,k)}$ is $2\times 2$ block-Toeplitz matrix with all its sub-blocks and sub-sub-blocks, etc.\ also $2\times 2$ block-Toeplitz for $k = 0, 1, \ldots$.  Then by \eqref{FJ:eq:cblock}, the same holds for $\mathsf{C}_{\bstheta}^{(m+1,k)}$ for $k = 0, 1, \ldots$. 
    
     Moreover, the hypothesized eigenvectors of $\mathsf{C}_{\bstheta}^{(m+1,k)}$ can also be verified by direct calculation under the induction hypothesis:
      \begin{align*}
@@ -517,13 +517,13 @@ Lemma \ref{FJ:lemma:eig} establishes that covariance kernels of the form \eqref{
 \begin{itemize}
     \item \eqref{FJ:eq:fastcompAssumpA}, since $\mathsf{V}$ is the Walsh-Hadamard matrix,
     
-    \item  \eqref{FJ:eq:fastcompAssumpB}, since the first column and row of the  Walsh-Hadamard matrix consists of all ones, and
+    \item  \eqref{FJ:eq:fastcompAssumpB}, since the first column and row of the  Walsh-Hadamard matrix consist of all ones, and
     
     \item \eqref{FJ:addAssump}, since all Walsh functions but the zeroth integrate to zero.
 \end{itemize}
 What remains to be shown is how $\mathsf{V}^H \bsb = \mathsf{H} \bsb$ can be calculated in $\calO(n \log(n))$ operations for arbitrary $\bsb$.
 
-The computation of $\widetilde{\bsb} =\mathsf{H} \bsb$ is done iteratively as follows and claim that it requires $m2^m$ operations for vectors $\bsb$ of length $2^m$. For the case $m=0$, $\widetilde{\bsb} = \mathsf{H}^{(m)} \bsb = \bsb$, which requires no arithmetic operations.  Now, Let $\bsb = (\bsb_1^{T},  \bsb_2^{T})$, where $\bsb_1$ and $\bsb_2$ are each of length $2^m$, and so $\bsb$ is of length $2^{m+1}$.  Let $\widetilde{\bsb} = \mathsf{H}^{(m+1)} \bsb$,  $\widetilde{\bsb}_1 = \mathsf{H}^{(m)} \bsb_1$, and $\widetilde{\bsb}_2 = \mathsf{H}^{(m)} \bsb_2$.  It follows from the definition of the Walsh-Hadamard matrix that 
+The computation of $\widetilde{\bsb} =\mathsf{H} \bsb$ is done iteratively as follows.  We claim that it requires $m2^m$ operations for vectors $\bsb$ of length $2^m$. For the case $m=0$, $\widetilde{\bsb} = \mathsf{H}^{(m)} \bsb = \bsb$, which requires no arithmetic operations.  Now, Let $\bsb = (\bsb_1^{T},  \bsb_2^{T})$, where $\bsb_1$ and $\bsb_2$ are each of length $2^m$, and so $\bsb$ is of length $2^{m+1}$.  Let $\widetilde{\bsb} = \mathsf{H}^{(m+1)} \bsb$,  $\widetilde{\bsb}_1 = \mathsf{H}^{(m)} \bsb_1$, and $\widetilde{\bsb}_2 = \mathsf{H}^{(m)} \bsb_2$.  It follows from the definition of the Walsh-Hadamard matrix that 
 \begin{align*}
 \widetilde{\bsb} &= \mathsf{H}^{({m+1})} \bsb = \begin{pmatrix}
 \mathsf{H}^{(m)} & \mathsf{H}^{(m)} \\ \mathsf{H}^{(m)} & - \mathsf{H}^{(m)}
@@ -542,7 +542,7 @@ The computation of $\widetilde{\bsb} =\mathsf{H} \bsb$ is done iteratively as fo
 \widetilde{\bsb}_1 - \widetilde{\bsb}_2
 \end{pmatrix}.
 \end{align*}
-Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\mathsf{H}^{(1)}$, at a cost of $m 2^m$ each, plus an addition and a subtraction of vectors of length $2^m$, for a total cost of $2 \times m 2^m + 2 \times 2^m = (m+1) 2^{m+1}$, which is exactly what is needed.
+Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\mathsf{H}^{(1)}$, at a cost of $m 2^m$ each, plus an addition and a subtraction of vectors of length $2^m$, for a total cost of $2 \times m 2^m + 2 \times 2^m = (m+1) 2^{m+1}$, which is exactly what is needed.  Since $\widetilde{\bsb} =\mathsf{H} \bsb$ requires $m2^m = n \log_2(n)$ operations to compute, assumption \eqref{FJ:eq:fastcompAssumpC} is satisfied.  This completes the proof of Theorem \ref{FJ:thm:main}.
 
 
 
@@ -562,43 +562,43 @@ Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\math
 
 % \JRNote{use uniformly randomly chosen $\varepsilon$ instead 4 fixed}
 
-The fast Bayesian cubature algorithm using digital sequences and the digital shift invariant kernel in \eqref{FJ:eqn:digital_shift_in_kernel} with order $r=1$ has been coded as \texttt{cubBayesNet\_g}.  We illustrate our algorithm for three common examples, which were also treated in \cite{RatHic19a} via fast Bayesian cubature based on rank-1 lattices and shift invariant kernels and coded as \texttt{cubBayesLattice\_g}. The first example evaluates a multivariate Gaussian probability, the second example is Keister's function \cite{Kei96}, and the final example is pricing an Asian arithmetic mean option.  For each example we are able to find an ``exact'' answer, either by direct computation, or by running a numerical algorithm with a very small error tolerance.
+The Bayesian cubature algorithm described here the digital shift invariant kernel in \eqref{FJ:eqn:digital_shift_in_kernel} with order $r=1$  and the Bayesian lattice cubature algorithm described in \cite{RatHic19a} have been coded as  \texttt{cubBayesNet\_g} and \texttt{cubBayesLattice\_g}, respectively, in GAIL \cite{ChoEtal21a}.  We illustrate our algorithm for three common examples, which are also discussed in \cite{RatHic19a}.  The first example evaluates a multivariate Gaussian probability, the second example is Keister's function \cite{Kei96}, and the final example is pricing an Asian arithmetic mean option.  For each example we are able to find an ``exact'' answer, either by analytic computation, or by running a numerical algorithm with a very small error tolerance.
 
-The nodes used in \texttt{cubBayesNet\_g} were the randomly scrambled and shifted Sobol' points supplied by MATLAB's Sobol' sequence generator. Four hundred different error tolerances, $\varepsilon$, were randomly chosen such that $\log(\varepsilon)$ has a uniform distribution. 
-For each integral example, each $\varepsilon$, and each stopping criterion---empirical Bayes, full Bayes, and generalized cross-validation---we ran \texttt{cubBayesNet\_g}.  For each run, the execution time is plotted against $\abs{\mu - \widehat{\mu}}/\varepsilon$.  We expect $\abs{\mu - \widehat{\mu}}/\varepsilon$ to be no greater than one, but hope that it is not too much smaller than one, which would indicate that the stopping criterion that is too conservative.
+The nodes used in \texttt{cubBayesNet\_g} are the randomly scrambled and shifted Sobol' points supplied by MATLAB's Sobol' sequence generator. Four hundred different error tolerances, $\varepsilon$, are randomly chosen such that $\log(\varepsilon)$ has a uniform distribution. 
+For each integral example, each $\varepsilon$, and each stopping criterion---empirical Bayes, full Bayes, and generalized cross-validation---we ran \texttt{cubBayesNet\_g}.  For each run, the execution time is plotted against $\abs{\mu - \widehat{\mu}}/\varepsilon$.  We expect $\abs{\mu - \widehat{\mu}}/\varepsilon$ to be no greater than one, but hope that it is not too much smaller than one, which would indicate that the stopping criterion  is too conservative.
 
 \subsection{Multivariate Gaussian Probability}
 
-The integral is formulated as in \cite{RatHic19a} following the variable transformation introduced by Alan Genz \cite{Gen92}. The simulation results are summarized in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE}, \ref{FJ:fig:Sobol-mvn-guaranteed-FB}, and \ref{FJ:fig:Sobol-mvn-guaranteed-GCV}.  In all cases, \texttt{cubBayesNet\_g} returns an approximation within the prescribed error tolerance. For  $\varepsilon=10^{-5}$ with the empirical Bayes stopping criterion, \texttt{cubBayesNet\_g} takes about 3 seconds as shown in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-MLE} whereas using a Mat\'ern kernel requires 30 seconds to obtain the same accuracy as shown in \cite{RatHic19a}. This highlights the speed-up possible using fast Bayesian cubature.
+This integral is formulated as in \cite{RatHic19a} following the variable transformation introduced by Alan Genz \cite{Gen92}. The simulation results are summarized in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-EB}, \ref{FJ:fig:Sobol-mvn-guaranteed-FB}, and \ref{FJ:fig:Sobol-mvn-guaranteed-GCV}.  In all cases, \texttt{cubBayesNet\_g} returns an approximation within the prescribed error tolerance. For  $\varepsilon=10^{-5}$ with the empirical Bayes stopping criterion, \texttt{cubBayesNet\_g} takes about 3 seconds as shown in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-EB} whereas using a Mat\'ern kernel requires 30 seconds to obtain the same accuracy as shown in \cite{RatHic19a}. This highlights the speed-up possible using fast Bayesian cubature.
 
-The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform which is slower than MATLAB's fast Fourier transform, which is implemented in compiled code. We suspect that this is part of the reason that \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example. Also, \texttt{cubBayesLattice\_g} here uses higher order kernels whereas higher order digital shift-invariant kernels are inappropriate for these examples. The \texttt{cubBayesLattice\_g} uses on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} uses on average $n \approx 32{,}000$ samples.
+The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform.  This is slower than MATLAB's fast Fourier transform, which is implemented in compiled code. We suspect that this is part of the reason that \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example. Also, \texttt{cubBayesLattice\_g} here uses higher order kernels whereas higher order digital shift-invariant kernels are inappropriate for these examples. The \texttt{cubBayesLattice\_g} uses on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} uses on average $n \approx 32{,}000$ samples.
 
 Amongst the three stopping criteria, GCV achieves an acceptable approximation faster than others but it is less conservative. 
-One can also observe from the figures that the credible intervals are narrower than Empirical Bayes as in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-MLE}.
-This shows that \texttt{cubBayesNet\_g} with $r=1$ kernel more accurately approximates the integrand than the Empirical Bayes.
+One can also observe from the figures that the credible intervals are narrower than empirical Bayes as in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-EB}.
+This shows that \texttt{cubBayesNet\_g} with $r=1$ kernel more accurately approximates the integrand than the empirical Bayes.
 
 \begin{figure}
 \centering
 %d=3 problem transformed into d=2
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_MVN_guaranteed_time_MLE__d2_r1_2019-Sep-1"}
-\caption[Sobol: MVN guaranteed: MLE]{Multivariate normal probability example with empirical Bayes stopping criterion.  Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
+\caption[Sobol: MVN guaranteed:EB]{Multivariate normal probability example with empirical Bayes stopping criterion.  Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
 	% \FJHNote{Each caption should say what this is and why it is important.} 
 	% \JRNote{Done.  Explain the observation. Compare with other like EB, GCV, full. 
 % The error tolerance is always met by cubBayesLatticG } }
-\label{FJ:fig:Sobol-mvn-guaranteed-MLE}
+\label{FJ:fig:Sobol-mvn-guaranteed-EB}
 \end{figure}
 \begin{figure}
 \centering
 %d=3 problem transformed into d=2
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_MVN_guaranteed_time_full__d2_r1_2019-Sep-1"}
-\caption[Sobol: MVN guaranteed: Full Bayes]{Multivariate normal probability example with the full-Bayes stopping criterion. Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
+\caption[Sobol: MVN guaranteed: Full Bayes]{Multivariate normal probability example with the full-Bayes stopping criterion. Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
 \label{FJ:fig:Sobol-mvn-guaranteed-FB}
 \end{figure}
 \begin{figure}
 \centering
 %d=3 problem transformed into d=2
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_MVN_guaranteed_time_GCV__d2_r1_2019-Sep-1"}
-\caption[Sobol: MVN guaranteed: GCV]{Multivariate normal probability example with the GCV stopping criterion. Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
+\caption[Sobol: MVN guaranteed: GCV]{Multivariate normal probability example with the GCV stopping criterion. Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-5}, 10^{-2}]$.}
 \label{FJ:fig:Sobol-mvn-guaranteed-GCV}
 \end{figure}
 
@@ -626,7 +626,7 @@ and $\bsPhi$ is the component-wise standard normal distribution.
 The true value of $\mu$ can be calculated iteratively in terms of  quadrature as found in \cite[Section 5.2]{RatHic19a}.
 
 
-Figures \ref{FJ:fig:Sobol-keister-guaranteed-MLE}, \ref{FJ:fig:Sobol-keister-guaranteed-FB} and \ref{FJ:fig:Sobol-keister-guaranteed-GCV} summarize the numerical tests for this case for dimension $d=4$ and order $r=1$.  
+Figures \ref{FJ:fig:Sobol-keister-guaranteed-EB}, \ref{FJ:fig:Sobol-keister-guaranteed-FB} and \ref{FJ:fig:Sobol-keister-guaranteed-GCV} summarize the numerical tests for this case for dimension $d=4$ and order $r=1$.  
 %No periodization transform was used as the integrand need not be periodic. 
 % In this example, we use $r=1$ order kernel whereas \texttt{cubBayesLattice\_g} in \cite{RatHic19a}, smoother $r=2$ order kernel was used. 
 In \cite{RatHic19a} \texttt{cubBayesLattice\_g} used a much smoother kernel that used here.
@@ -636,19 +636,19 @@ As observed from the figures, the GCV stopping criterion, in Figure \ref{FJ:fig:
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_Keister_guaranteed_time_MLE__d4_r1_2019-Sep-1"}
-\caption[Sobol: Keister guaranteed: MLE]{Keister example using the empirical Bayes stopping criterion. Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
-\label{FJ:fig:Sobol-keister-guaranteed-MLE}
+\caption[Sobol: Keister guaranteed:EB]{Keister example using the empirical Bayes stopping criterion. Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
+\label{FJ:fig:Sobol-keister-guaranteed-EB}
 \end{figure}
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_Keister_guaranteed_time_full__d4_r1_2019-Sep-1"}
-\caption[Sobol: Keister guaranteed: Full Bayes]{Keister example using the full-Bayes stopping criterion. Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
+\caption[Sobol: Keister guaranteed: Full Bayes]{Keister example using the full-Bayes stopping criterion. Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
 \label{FJ:fig:Sobol-keister-guaranteed-FB}
 \end{figure}
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_Keister_guaranteed_time_GCV__d4_r1_2019-Sep-1"}
-\caption[Sobol: Keister guaranteed: GCV]{Keister example using the GCV stopping criterion. Algorithm has met the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
+\caption[Sobol: Keister guaranteed: GCV]{Keister example using the GCV stopping criterion. Algorithm meets the error threshold for all the $\epsilon$ randomly chosen in $[10^{-4}, 10^{-1}]$.}
 \label{FJ:fig:Sobol-keister-guaranteed-GCV}
 \end{figure}
 
@@ -685,7 +685,7 @@ Here, $T$ denotes the time to maturity of the option, $d$ the number of time ste
 \fi
 
 %\Subsection{Option Pricing}
-The Figures \ref{FJ:fig:Sobol-optprice-guaranteed-MLE}, \ref{FJ:fig:Sobol-optprice-guaranteed-FB} and 
+The Figures \ref{FJ:fig:Sobol-optprice-guaranteed-EB}, \ref{FJ:fig:Sobol-optprice-guaranteed-FB} and 
 \ref{FJ:fig:Sobol-optprice-guaranteed-GCV} summarize the numerical results for the option pricing example using the values for,
 time horizon $T = 1/4$ of a year, $d = 13$ time steps, initial asset price of $S_0 = 100$, interest rate of $r =  0.05$ per year, volatility of $\sigma = 0.5$ per root year, and strike price of  $K = 200$, the same as used in the experiments of \texttt{cubBayesLattice\_g} \cite{RatHic19a}.
 This integrand has a kink caused by the $\max$ function, so lattice rules cannot perform better, even if the integrand were to be periodized.  We observe that \texttt{cubBayesNet\_g} is more efficient than \texttt{cubBayesLattice\_g}.  For the error tolerance, $\varepsilon=10^{-3}$,  \texttt{cubBayesLattice\_g} uses $n \approx 2^{20}$ samples, whereas \texttt{cubBayesNet\_g} uses $n \approx 2^{17}$ samples.
@@ -694,14 +694,14 @@ This integrand has a kink caused by the $\max$ function, so lattice rules cannot
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_optPrice_guaranteed_time_MLE__d12_r1_2019-Sep-1"}
-\caption[Sobol: Option pricing guaranteed: MLE]{Option pricing using the empirical Bayes stopping criterion. The hollow stars indicate the half-width of the credible interval has not met the error threshold $\epsilon$ before reaching maximum $n$.}
-\label{FJ:fig:Sobol-optprice-guaranteed-MLE}
+\caption[Sobol: Option pricing guaranteed:EB]{Option pricing using the empirical Bayes stopping criterion. The hollow stars indicate the half-width of the credible interval did not meet the error threshold $\epsilon$ before reaching maximum $n$.}
+\label{FJ:fig:Sobol-optprice-guaranteed-EB}
 \end{figure}
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_optPrice_guaranteed_time_full__d12_r1_2019-Sep-1"}
-\caption[Sobol: Option pricing guaranteed: Full Bayes]{Option pricing using the full-Bayes stopping criterion. The hollow stars indicate the half-width of the credible interval has not met the error threshold $\epsilon$ before reaching maximum $n$. 
-%The hollow stars indicate the algorithm has not met the error threshold $\epsilon$ even with using maximum $n$.
+\caption[Sobol: Option pricing guaranteed: Full Bayes]{Option pricing using the full-Bayes stopping criterion. The hollow stars indicate the half-width of the credible interval did not meet the error threshold $\epsilon$ before reaching maximum $n$. 
+%The hollow stars indicate the algorithm did not meet the error threshold $\epsilon$ even with using maximum $n$.
 %\JRNote{fix this: hollow star means algoritm used maximum N, estimated error is bigger than the threshold}
 }
 \label{FJ:fig:Sobol-optprice-guaranteed-FB}
@@ -709,7 +709,7 @@ This integrand has a kink caused by the $\max$ function, so lattice rules cannot
 \begin{figure}
 \centering
 \includegraphics[width=0.95\linewidth]{"figures/Sobol/Sobol_optPrice_guaranteed_time_GCV__d12_r1_2019-Sep-1"}
-\caption[Sobol: Option pricing guaranteed: GCV]{Option pricing using the GCV stopping criterion. The hollow stars indicate the half-width of the credible interval has not met the error threshold $\epsilon$ before reaching maximum $n$.}
+\caption[Sobol: Option pricing guaranteed: GCV]{Option pricing using the GCV stopping criterion. The hollow stars indicate the half-width of the credible interval did not meet the error threshold $\epsilon$ before reaching maximum $n$.}
 \label{FJ:fig:Sobol-optprice-guaranteed-GCV}
 \end{figure}
 
@@ -719,8 +719,8 @@ This integrand has a kink caused by the $\max$ function, so lattice rules cannot
 \subsection{Discussion}
 % \JRNote{Move this to end of chapter}
 
-As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, our algorithm computed the integral within user specified threshold most of the time with few exceptions. The exceptions occurred for the  option pricing example due to the complexity and high dimension of the integrand. 
-Also notice that our algorithm \texttt{cubBayesNet\_g}, finished within 40 seconds for Keister and multivariate Gaussian. Option pricing took little above 100 seconds due to the complexity of integrand.
+As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-EB} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, our algorithm computed the integral within user specified threshold with few exceptions. The exceptions occurred for the  option pricing example due to the complexity and high dimension of the integrand. 
+Also notice that our algorithm \texttt{cubBayesNet\_g}, finished within 40 seconds for Keister and multivariate Gaussian for the smallest tolerance. Option pricing took little above 100 seconds due to the complexity of integrand.
 
 %\FJHNote{For which examples?} 
 A most noticeable aspect from the plots of \texttt{cubBayesNet\_g} is how close the error bounds are to the true error. 
@@ -730,7 +730,7 @@ In nearly all of the examples, the ratio $\abs{\mu - \widehat{\mu}}/\varepsilon$
 A possible reason is that the periodization transform speeds the convergence in the former case and makes the error bounds too conservative.
 % This is a matter for further investigation.
 
-% As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-MLE} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, the \texttt{cubBayesNet\_g} algorithm computes the integral within user specified threshold most of the times except on a few occasions. This is especially the case with option pricing example due to the complexity and high dimension of the integrand as mentioned in the previous example. 
+% As shown in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-EB} to \ref{FJ:fig:Sobol-optprice-guaranteed-GCV}, the \texttt{cubBayesNet\_g} algorithm computes the integral within user specified threshold most of the times except on a few occasions. This is especially the case with option pricing example due to the complexity and high dimension of the integrand as mentioned in the previous example. 
 
 
 % \FJHNote{I do not understand this paragraph. }
@@ -749,7 +749,7 @@ We have extended our fast automatic Bayesian cubature to digital net sampling vi
 One major advantage of this algorithm, unlike the \texttt{cubBayesLattice\_g} developed in \cite{RatHic19a}, is that the integrand does not have to be periodic.  However, unlike \texttt{cubBayesNet\_g}, \texttt{cubBayesLattice\_g} is more efficient for smoother, periodic functions when using sufficiently smooth and periodic covariance kernels.
 %\FJHNote{Not sure what this means.  }However, special structure of both the sequences and the kernels are required to take advantage of integrand smoothness.
 
-The \texttt{cubBayesNet\_g} in the current implementation uses only the first order kernel and digital nets. Accuracy and speed of the algorithm could be improved by using smoother higher order digital nets and digital shift-invariant covariance kernels. This could help with the smoother integrands. This is a promising direction for future work.
+The \texttt{cubBayesNet\_g} in the current implementation uses only the first order kernel and digital nets. Accuracy and speed of the algorithm could be improved by using higher order digital nets and smoother digital shift-invariant covariance kernels. This could help with the smoother integrands. This is a promising direction for future work.
 
 For higher dimensions, both Bayesian cubature algorithms face sometimes fail to produce an acceptable answer within a reasonable amount of time.  This seems to be related to an excessive amount of time required to identify the optimal shape parameter $\boldsymbol{\theta}$.  The root of the problem and its resolution is a matter for future investigation.
 
