Home Computer Update

--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -279,7 +279,7 @@ Our  Bayesian cubature algorithm increases the sample size until the width of th
 		\EndWhile
 		
 		\State Sample size to compute $\widehat{\mu}$, $n \gets n'$
-		\State Compute $\widehat{\mu}$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-EB-Simple}
+		\State Compute $\widehat{\mu}$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-MLE-Simple}
 		\State \Return $\widehat{\mu}, \; n$  and $\textup{err}_\textup{CI}$
 	\end{algorithmic}
 \end{algorithm}
